# ec2_cli

./: AWS EC2 Management CLI readme.md
ec2_cli/: main.py  pyproject.toml
ec2_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ec2_cli/aws/: session.py
ec2_cli/cli/: create_instances.py  delete_instances.py  list_instances.py  menu.py
ec2_cli/services/: ami_service.py  ec2_service.py
