[project]
name = "ec2-cli"
version = "0.1.0"
description = "Interactive CLI for managing EC2 instances"
authors = [
  { name = "Axel Barrantes Anchia" }
]
dependencies = [
  "boto3"
]

[project.scripts]
ec2-cli = "ec2_cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
